# winget-latest-pkgs

./: .gitignore  extract_winget_json.py  packages.json  pyproject.toml
.github/workflows/: winget-fetch.yml
